refactor(SP-42): refactor code
